Requisitos de campo para POST y PUT
