# proyecto/models/partido.js
@@ -21,22 +21,22 @@ const statsSchema = new mongoose.Schema({
 });
 
 const teamSchema = new mongoose.Schema({
-  id: Number,
-  name: String,
+  id: { type: Number, required: true },
+  name: { type: String, required: true },
   logo: String,
-  winner: Boolean,
+  winner: { type: Boolean, required: true },
 });
 
 const partidoSchema = new mongoose.Schema({
-  matchId: Number,
+  matchId: { type: Number, required: true },
   date: Date,
   teams: {
-    home: teamSchema,
-    away: teamSchema
+    home: { type: teamSchema, required: true },
+    away: { type: teamSchema, required: true }
   },
   goals: {
-    home: Number,
-    away: Number
+    home: { type: Number, required: true },
+    away: { type: Number, required: true }
   },
   statistics: [{
     team: teamSchema,
